Adds recording funcionality and 5 sheet lines

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 
     <script>window.TONE_SILENCE_VERSION_LOGGING = true</script>
 
+    <!-- NOTE: didn't find any npm package that worked, hence including it here -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/recorderjs/0.1.0/recorder.js"></script>
+
     <title>Caça Sons</title>
 
 </head>
