--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
     <!-- NOTE: didn't find any npm package that worked, hence including it here -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/recorderjs/0.1.0/recorder.js"></script>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css" /> -->
 
     <title>Caça Sons</title>
 
