Adds some meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
+    <meta name="description" content="Caça Sons">
+    <meta name="keywords" content="Caça Sons, música interativa"> <!-- TODO: improve keywords... -->
+    <meta name="author" content="Digitópia, Casa da Música">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
     <script>window.TONE_SILENCE_VERSION_LOGGING = true</script>
