--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <meta name="author" content="Digitópia, Casa da Música">
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-
     <script>window.TONE_SILENCE_VERSION_LOGGING = true</script>
+    <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <!-- NOTE: didn't find any npm package that worked, hence including it here -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/recorderjs/0.1.0/recorder.js"></script>
