Update audio page description

--- a/public/audios/index.html
+++ b/public/audios/index.html
@@ -35,10 +35,9 @@
         <div class="container mt-5" id="audios">
             <h1>Gravações Caça Sons</h1>
             <p class="mt-5">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam,
-                delectus vitae animi eveniet excepturi omnis optio repellendus
-                aspernatur, laudantium dolores cumque tempore! Quia quasi fugit
-                id assumenda molestiae!
+                Página que contém os resultados finais do projecto Caça-Sons, 
+                uma oficina do Serviço Educativo Casa da Música/Worten Digitópia Casa da Música.
+                Formadores: Rui Rodrigues e Tiago Oliveira.
             </p>
             <div class="card-columns mt-5">
                 <div v-for="(audio, idx) in audios" :key="idx" class="card">
